<resources>
    <string name="app_name">Bedel Manager</string>
    <string name="intro">Selecione seu andar</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="flooat">Choice your float</string>
    <string name="cont">Continue</string>
    <string name="room">Room</string>
    <string name="data">Datashow number</string>
    <string name="time">Schedule(1/2)</string>
    <string name="equipment">Equipment</string>
    <string name="report">Report</string>
    <string name="save">SAVE</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="schedule">Schedule</string>
    <string name="n_datashow">Datashow N°</string>
    <string name="deletar">DELETAR</string>
    <string name="_1_2_hor_rio">1°/2° - Horário</string>

    <string-array name="andar">
        <item>Térreo</item>
        <item>1°Andar</item>
        <item>Mezanino</item>
        <item>Ala nova</item>
    </string-array>

    <string-array name="salas">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>Lab 1</item>
        <item>Lab 2</item>
        <item>Lab 3</item>
        <item>Lab 4</item>
        <item>Lab 5</item>
        <item>Lab 6</item>
    </string-array>

    <string-array name="equipamentos">
        <item>Datashow</item>
        <item>Datashow-CPU</item>
        <item>Datashow-P2</item>
        <item>Datashow-CPU-P2</item>
        <item>CPU</item>
        <item>P2</item>
        <item>Extenção</item>
    </string-array>

    <string-array name="schedule">
        <item>1° Horário</item>
        <item>2° Horário</item>
        <item>1°/2° Horário</item>
    </string-array>


</resources>
